# inf224_cpp_qt

./: CMakeLists.txt  Doxyfile  Film.cpp  Film.h  Group.cpp  Group.h  Makefile  Multimedia.cpp  Multimedia.h  MultimediaException.h  MultimediaManager.cpp  MultimediaManager.h  Photo.cpp  Photo.h  Video.cpp  Video.h  main.cpp
Swing/: MainFrame.java
cpp/: Film.cpp  Film.h  Group.cpp  Group.h  Makefile-cpp  Multimedia.cpp  Multimedia.h  MultimediaManager.cpp  Photo.cpp  Photo.h  Video.cpp  client  client.cpp  server  server.cpp
swing/: Actions.java  ClientConnection.java  MainFrame.java  Makefile-swing
tcpserver/: Makefile-cliserv  client  server  server.cpp
